--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,4 @@
-# You can provide multiple cahllanges sperated by space. Key values are seperated with ":" symbol
-# Example ACME_CHALLENGES=1:2 3:4 5:6 7:8 9:10
-ACME_CHALLENGES=
-
-# Base url to generate certificates
-# production - https://acme-v02.api.letsencrypt.org/directory
-# staging - https://acme-staging-v02.api.letsencrypt.org/directory
-LETS_ENCRYPT_DIRECTORY_URL=
-LETS_ENCRYPT_ACCOUNT_KEY_PATH=
+# Basic auth
+BASIC_AUTH_USERNAME=
+BASIC_AUTH_PASSWORD=
+BASIC_AUTH_REALM=pieteikumu-generators
