Added volume /app

--- a/manifests/api-deployment.yaml
+++ b/manifests/api-deployment.yaml
@@ -46,5 +46,12 @@ spec:
         ports:
         - containerPort: 4000
         resources: {}
+        volumeMounts:
+        - mountPath: /app
+          name: app
       restartPolicy: Always
+      volumes:
+      - name: app
+        persistentVolumeClaim:
+          claimName: iesniegumi.pilsetacilvekiem.lv
 status: {}
