--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,4 +46,5 @@ stages:
                 $(Pipeline.Workspace)/manifests/api-env-configmap.yaml
                 $(Pipeline.Workspace)/manifests/api-service.yaml
                 $(Pipeline.Workspace)/manifests/ingress.yml
+                $(Pipeline.Workspace)/manifests/persistent-volume-claim.yml
                 $(Pipeline.Workspace)/manifests/role-binding.yml
