Added image build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,14 @@ resources:
 - repo: self
 
 variables:
+  # Container registry service connection established during pipeline creation
+  dockerRegistryServiceConnection: 'f3d75458-4617-466a-936c-bd46f8af59ec'
+  imageRepository: 'iesniegumugenerators'
+  containerRegistry: 'iesniegumipilsetacilvekiemlv.azurecr.io'
+  dockerfilePath: '**/Dockerfile'
+  tag: '$(Build.BuildId)'
+  imagePullSecret: 'image-pull-secret'
+
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 
@@ -20,6 +28,16 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: Docker@2
+      displayName: Build and push an image to container registry
+      inputs:
+        command: buildAndPush
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
+
     - publish: manifests
       artifact: manifests
 
@@ -38,6 +56,13 @@ stages:
         deploy:
           steps:
           - task: KubernetesManifest@0
+            displayName: Create imagePullSecret
+            inputs:
+              action: createSecret
+              secretName: $(imagePullSecret)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+
+          - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
@@ -48,3 +73,7 @@ stages:
                 $(Pipeline.Workspace)/manifests/ingress.yml
                 $(Pipeline.Workspace)/manifests/persistent-volume-claim.yml
                 $(Pipeline.Workspace)/manifests/role-binding.yml
+              imagePullSecrets: |
+                $(imagePullSecret)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
