--- a/manifests/api-deployment.yaml
+++ b/manifests/api-deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: api
-  name: api
+  name: iesniegumi.pilsetacilvekiem.lv
 spec:
   replicas: 1
   strategy: {}
