--- a/manifests/api-env-configmap.yaml
+++ b/manifests/api-env-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   BASIC_AUTH_PASSWORD: ""
-  BASIC_AUTH_REALM: pieteikumu-generators
+  BASIC_AUTH_REALM: ""
   BASIC_AUTH_USERNAME: ""
 kind: ConfigMap
 metadata:
