--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,12 +1,16 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+  labels:
+    app: api
   name: iesniegumi.pilsetacilvekiem.lv
 spec:
   replicas: 1
-  strategy:
-    type: RollingUpdate
+  strategy: RollingUpdate
   template:
+    metadata:
+      labels:
+        app: api
     spec:
       containers:
       - env:
