Kubernetes manifest fix

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -6,7 +6,8 @@ metadata:
   name: iesniegumi.pilsetacilvekiem.lv
 spec:
   replicas: 1
-  strategy: RollingUpdate
+  strategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
